--- a/index.html
+++ b/index.html
@@ -1,213 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EchoStream</title>
+// Firebase configuration
+const firebaseConfig = {
+  apiKey: "YOUR_API_KEY",
+  authDomain: "YOUR_AUTH_DOMAIN",
+  projectId: "YOUR_PROJECT_ID",
+  storageBucket: "YOUR_STORAGE_BUCKET",
+  messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
+  appId: "YOUR_APP_ID"
+};
 
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
-<style>
-:root {
-  --bg:#fff; --text:#000; --card:#f3f3f3; --border:#ddd; --accent:#1da1f2;
-}
-body.dark {
-  --bg:#000; --text:#fff; --card:#1a1a1a; --border:#333;
-}
-body {
-  margin:0;
-  font-family:system-ui,-apple-system,sans-serif;
-  background:var(--bg);
-  color:var(--text);
-}
-header {
-  position:fixed; top:0; left:0; right:0;
-  padding:14px;
-  background:var(--bg);
-  border-bottom:1px solid var(--border);
-  display:flex;
-  justify-content:space-between;
-  z-index:10;
-}
-nav {
-  position:fixed; bottom:0; left:0; right:0;
-  display:flex; justify-content:space-around;
-  padding:12px 0;
-  background:var(--bg);
-  border-top:1px solid var(--border);
-}
-main {
-  padding:80px 16px 90px;
-  max-width:600px;
-  margin:auto;
-}
-.card {
-  background:var(--card);
-  padding:16px;
-  border-radius:16px;
-  margin-bottom:12px;
-}
-textarea,input {
-  width:100%;
-  padding:10px;
-  border-radius:10px;
-  border:1px solid var(--border);
-  background:var(--bg);
-  color:var(--text);
-}
-button {
-  background:var(--accent);
-  color:#fff;
-  border:none;
-  padding:10px 18px;
-  border-radius:999px;
-  margin-top:8px;
-  cursor:pointer;
-}
-.hidden { display:none; }
-.avatar {
-  width:60px;height:60px;
-  border-radius:50%;
-  background:#666;
-  color:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:24px;
-  font-weight:bold;
-}
-.verified { color:#1da1f2; }
-.post-image {
-  max-width:100%;
-  border-radius:12px;
-  margin-top:8px;
-}
-.modal {
-  display:none;
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  justify-content:center;
-  align-items:center;
-}
-.modal-content {
-  background:var(--card);
-  padding:24px;
-  border-radius:16px;
-  width:90%;
-  max-width:400px;
-}
-</style>
-</head>
-
-<body>
-
-<header>
-  EchoStream
-  <i class="fas fa-cog" onclick="route('settings')"></i>
-</header>
-
-<main>
-
-<div id="login">
-  <h2>Welcome to EchoStream</h2>
-  <button onclick="login()">Sign in with Google</button>
-</div>
-
-<div id="feed" class="hidden">
-  <div class="card">
-    <textarea id="postText" placeholder="What’s happening?"></textarea>
-    <input type="file" id="postImage" accept="image/*">
-    <button onclick="createPost()">Post</button>
-  </div>
-  <div id="posts"></div>
-</div>
-
-<div id="profile" class="hidden"></div>
-
-<div id="settings" class="hidden">
-  <div class="card">
-    <label>
-      <input type="checkbox" id="darkToggle"> Dark mode
-    </label><br><br>
-    <button onclick="logout()">Logout</button>
-  </div>
-</div>
-
-<div id="usernameModal" class="modal">
-  <div class="modal-content">
-    <h3>Pick a username</h3>
-    <input id="usernameInput">
-    <button onclick="saveUsername()">Save</button>
-  </div>
-</div>
-
-</main>
-
-<nav>
-  <i class="fa fa-house" onclick="route('feed')"></i>
-  <i class="fa fa-user" onclick="route('profile')"></i>
-  <i class="fa fa-gear" onclick="route('settings')"></i>
-</nav>
-
-<script>
-firebase.initializeApp({
-  apiKey: "AIzaSyCmY_zfNcH5XnEaQxlqaTW1D8EUR670-Zo",
-  authDomain: "echostream-a102a.firebaseapp.com",
-  projectId: "echostream-a102a",
-  storageBucket: "echostream-a102a.appspot.com",
-  messagingSenderId: "789062222400",
-  appId: "1:789062222400:web:73d478269135a77d7d55a5"
-});
+firebase.initializeApp(firebaseConfig);
 
 const auth = firebase.auth();
 const db = firebase.firestore();
 const storage = firebase.storage();
 let currentUser, userData;
 
+function signUp() {
+  const email = prompt("Enter your email:");
+  const password = prompt("Enter your password:");
+  if (!email || !password) {
+    alert("Please enter a valid email and password.");
+    return;
+  }
+  auth
+    .createUserWithEmailAndPassword(email, password)
+    .then(async (userCredential) => {
+      currentUser = userCredential.user;
+      await db.collection("users").doc(currentUser.uid)
+        .set({
+          username: "",
+          following: [],
+          followers: []
+        })
+        .then(() => {
+          usernameModal.style.display = "flex";
+          usernameInput.focus();
+        })
+        .catch((error) => {
+          console.error("Error setting user data:", error);
+          alert("Error signing up. Please try again later.");
+        });
+    })
+    .catch((error) => {
+      console.error("Error signing up:", error);
+      alert("Error signing up. Please try again later.");
+    });
+}
+
 function login() {
-  auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+  auth.signInWithPopup(new firebase.auth.GoogleAuthProvider())
+    .then(() => {
+      route("feed");
+    })
+    .catch((error) => {
+      console.error("Error signing in:", error);
+      alert("Error signing in. Please try again later.");
+    });
 }
 
 function logout() {
-  auth.signOut().then(() => location.reload());
-}
-
-auth.onAuthStateChanged(async user => {
-  if (!user) return;
-  currentUser = user;
-  document.getElementById("login").style.display = "none";
-  route("feed");
-
-  const ref = db.collection("users").doc(user.uid);
-  const snap = await ref.get();
-
-  if (!snap.exists) {
-    await ref.set({
-      username: user.displayName.replace(/\s/g,"").toLowerCase(),
-      following: [],
-      followers: []
+  auth.signOut()
+    .then(() => {
+      location.reload();
+    })
+    .catch((error) => {
+      console.error("Error signing out:", error);
+      alert("Error signing out. Please try again later.");
     });
-    document.getElementById("usernameModal").style.display = "flex";
-  } else {
-    userData = snap.data();
-  }
-
-  loadFeed();
-});
-
-function route(page) {
-  ["feed","profile","settings"].forEach(p =>
-    document.getElementById(p).classList.add("hidden")
-  );
-  document.getElementById(page).classList.remove("hidden");
-  if (page === "profile") loadProfile(currentUser.uid);
 }
 
 async function createPost() {
@@ -235,12 +94,12 @@ async function createPost() {
   postImage.value = "";
 }
 
-function loadFeed() {
+async function loadFeed() {
   db.collection("posts")
-    .orderBy("timestamp","desc")
-    .onSnapshot(snap => {
+    .orderBy("timestamp", "desc")
+    .onSnapshot((snap) => {
       posts.innerHTML = "";
-      snap.forEach(doc => {
+      snap.forEach((doc) => {
         const p = doc.data();
         posts.innerHTML += `
           <div class="card">
@@ -265,7 +124,7 @@ async function loadProfile(uid) {
 }
 
 async function viewUser(username) {
-  const snap = await db.collection("users").where("username","==",username).get();
+  const snap = await db.collection("users").where("username", "==", username).get();
   if (!snap.empty) {
     loadProfile(snap.docs[0].id);
     route("profile");
@@ -274,11 +133,18 @@ async function viewUser(username) {
 
 async function saveUsername() {
   const name = usernameInput.value.trim().toLowerCase();
-  await db.collection("users").doc(currentUser.uid).update({ username: name });
-  userData.username = name;
-  usernameModal.style.display = "none";
+  await db.collection("users").doc(currentUser.uid)
+    .update({ username: name })
+    .then(() => {
+      userData.username = name;
+      usernameModal.style.display = "none";
+      route("profile");
+    })
+    .catch((error) => {
+      console.error("Error saving username:", error);
+      alert("Error saving username. Please try again later.");
+    });
 }
-</script>
 
-</body>
-</html>
+function route(page) {
+  ["feed", "profile", "settings"].forEach((p) =>
