--- a/index.html
+++ b/index.html
@@ -127,12 +127,22 @@ auth.onAuthStateChanged(async user=>{
 if(!user){document.getElementById("login").style.display="block";return;}
 currentUser=user;
 document.getElementById("login").style.display="none";
+
 const ref=db.collection("users").doc(user.uid);
 const snap=await ref.get();
+
 if(!snap.exists){
-await ref.set({username:user.displayName.replace(/\s/g,"").toLowerCase(),followers:[],following:[]});
-document.getElementById("usernameModal").style.display="flex";
-}else{userData=snap.data();}
+    await ref.set({username:user.displayName.replace(/\s/g,"").toLowerCase(),followers:[],following:[]});
+    document.getElementById("usernameModal").style.display="flex";
+}else{
+    userData=snap.data();
+    // Auto-generate missing username
+    if(!userData.username || userData.username.trim()===''){
+        const autoName = user.displayName ? user.displayName.replace(/\s/g,'').toLowerCase() : user.uid;
+        await db.collection("users").doc(user.uid).update({ username: autoName });
+        userData.username = autoName;
+    }
+}
 route("feed");
 loadFeed();
 });
@@ -177,16 +187,16 @@ const liked=post.likes?.includes(currentUser.uid);
 let commentsHtml="";
 (post.comments||[]).forEach(c=>{
 commentsHtml+=`<div class="comment">
-<div class="avatar">${c.username[0].toUpperCase()}</div>
-<div class="comment-body"><strong>${c.username}</strong><br>${c.text}</div>
+<div class="avatar">${c.username ? c.username[0].toUpperCase():'?'}</div>
+<div class="comment-body"><strong>${c.username || 'Unknown'}</strong><br>${c.text}</div>
 </div>`;
 });
 return `
 <div class="card">
 <div style="display:flex;align-items:center;gap:12px;">
-<div class="avatar">${post.username[0].toUpperCase()}</div>
+<div class="avatar">${post.username ? post.username[0].toUpperCase():'?'}</div>
 <div>
-<strong class="username-link" onclick="loadProfile('${post.uid}')">${post.username}</strong><br>
+<strong class="username-link" onclick="loadProfile('${post.uid}')">${post.username || 'Unknown'}</strong><br>
 <small>${timeAgo(post.timestamp)}</small>
 </div>
 </div>
@@ -268,8 +278,8 @@ postsHtml+=`<div class="card"><p>${p.text}</p>${p.imageUrl?`<img src="${p.imageU
 });
 document.getElementById("profile").innerHTML=`
 <div class="card" style="text-align:center">
-<div class="avatar">${u.username[0].toUpperCase()}</div>
-<h3>${u.username}</h3>
+<div class="avatar">${u.username ? u.username[0].toUpperCase() : '?'}</div>
+<h3>${u.username || 'Unknown'}</h3>
 <p>Followers: ${u.followers?.length||0} | Following: ${u.following?.length||0}</p>
 ${uid!==currentUser.uid?`<button onclick="toggleFollow('${uid}')">Follow/Unfollow</button>`:""}
 </div>
@@ -300,7 +310,7 @@ const snap=await db.collection("users").get();
 let html="";
 snap.forEach(doc=>{
 const u=doc.data();
-if(u.username.includes(q))html+=`<div class="card"><strong onclick="loadProfile('${doc.id}')">${u.username}</strong></div>`;
+if(u.username && u.username.includes(q)) html+=`<div class="card"><strong onclick="loadProfile('${doc.id}')">${u.username}</strong></div>`;
 });
 res.innerHTML=html;
 }
