--- a/public/safety.html
+++ b/public/safety.html
@@ -1,89 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>EchoStream – Child Safety Standards</title>
 
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
       background: #0b0f19;
       color: #e8eeff;
     }
-    .wrap {
+
+    .container {
       max-width: 900px;
-      margin: 0 auto;
-      padding: 28px 18px 60px;
+      margin: auto;
+      padding: 32px 20px 60px;
     }
+
     .card {
       background: #121a2a;
-      border: 1px solid rgba(255,255,255,.08);
       border-radius: 14px;
-      padding: 24px;
+      padding: 28px;
+      border: 1px solid rgba(255,255,255,0.08);
     }
+
     h1 {
-      margin: 0 0 8px;
       font-size: 26px;
+      margin-bottom: 8px;
     }
+
     h2 {
-      margin-top: 22px;
-      font-size: 18px;
+      margin-top: 28px;
+      font-size: 20px;
     }
+
     p, li {
-      line-height: 1.55;
-      color: rgba(232,238,252,.92);
+      line-height: 1.6;
+      color: rgba(232,238,255,0.92);
     }
+
+    ul {
+      padding-left: 20px;
+    }
+
+    .badge {
+      display: inline-block;
+      padding: 6px 12px;
+      background: rgba(122,183,255,0.15);
+      border-radius: 999px;
+      border: 1px solid rgba(122,183,255,0.4);
+      margin-bottom: 14px;
+      font-size: 13px;
+    }
+
     a {
       color: #7ab7ff;
     }
-    .pill {
-      display: inline-block;
-      background: rgba(122,183,255,.14);
-      border: 1px solid rgba(122,183,255,.3);
-      padding: 6px 10px;
-      border-radius: 999px;
-      margin-bottom: 12px;
-      font-size: 13px;
-    }
+
     footer {
-      margin-top: 18px;
+      margin-top: 24px;
       font-size: 14px;
-      color: rgba(232,238,252,.72);
+      color: rgba(232,238,255,0.7);
     }
   </style>
 </head>
 
 <body>
-  <div class="wrap">
+  <div class="container">
     <div class="card">
+      <span class="badge">CSAE / Child Safety Policy</span>
+
       <h1>EchoStream – Child Safety Standards</h1>
-      <div class="pill">CSAE / Child Safety Policy</div>
 
       <p>
-        This page describes EchoStream’s standards, policies, and reporting
-        procedures related to child sexual abuse and exploitation (CSAE).
+        EchoStream is committed to protecting children and maintaining a safe environment.
+        We enforce a zero-tolerance policy toward any content involving child sexual abuse
+        or exploitation (CSAE/CSAM).
       </p>
 
       <h2>1. Zero-Tolerance Policy</h2>
       <p>
-        EchoStream has a strict zero-tolerance policy for any content involving
-        child sexual abuse material (CSAM) or exploitation of minors.
+        EchoStream strictly prohibits:
       </p>
       <ul>
-        <li>Sexual content involving minors</li>
-        <li>Grooming, solicitation, or exploitation</li>
-        <li>Requests for CSAM or sexualized images of minors</li>
-        <li>Any attempt to direct users to off-platform CSAM</li>
+        <li>Any sexual content involving minors</li>
+        <li>Child sexual abuse material (CSAM)</li>
+        <li>Grooming, solicitation, or exploitation of minors</li>
+        <li>Requests for or distribution of CSAE content</li>
       </ul>
 
-      <h2>2. Reporting In-App</h2>
+      <h2>2. In-App Reporting</h2>
       <p>
-        Users can report content directly in the EchoStream app using the
+        Users can report content directly within the app using the
         <strong>Report</strong> option on posts or profiles.
-        Reports are reviewed promptly by moderation systems and administrators.
+        All reports are reviewed promptly, and violations may result in
+        content removal, account suspension, or permanent bans.
       </p>
 
       <h2>3. External Reporting</h2>
@@ -92,36 +105,38 @@
         Suspected CSAM may also be reported to the National Center for Missing &
         Exploited Children (NCMEC):
       </p>
+
       <p>
         <a href="https://www.missingkids.org/gethelpnow/cybertipline"
-           target="_blank" rel="noopener">
+           target="_blank" rel="noopener noreferrer">
           https://www.missingkids.org/gethelpnow/cybertipline
         </a>
       </p>
 
       <h2>4. Enforcement</h2>
       <p>
-        EchoStream may remove content, suspend accounts, or permanently ban users
-        who violate child safety policies. Severe violations may be reported to
-        relevant authorities as required by law.
+        EchoStream cooperates with law enforcement when required and may preserve
+        relevant data to comply with legal obligations. Severe or repeated violations
+        result in permanent account termination.
       </p>
 
       <h2>5. Contact</h2>
       <p>
-        For questions about child safety compliance, contact:
+        For child safety or compliance inquiries, contact:
         <br />
         <strong>Email:</strong>
         <a href="mailto:echosteram@gmail.com">echosteram@gmail.com</a>
       </p>
 
       <footer>
-        Last updated: <span id="d"></span>
+        Last updated:
+        <span id="date"></span>
       </footer>
     </div>
   </div>
 
   <script>
-    document.getElementById("d").textContent =
+    document.getElementById("date").textContent =
       new Date().toISOString().slice(0, 10);
   </script>
 </body>
